-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.8
-
None
-
0532419f7 (dev)
-
DaVinci 94
When \deprecate is used for future Qt version, qdoc should ignore the deprecation command.
Example: https://doc-snapshots.qt.io/qt6-dev/qcheckbox-obsolete.html#stateChanged
Despite what the documentation says, this method is not deprecated just yet (in Qt 6.7, Qt 6.8). It will be in Qt 6.9, though:
/*!
\fn void QCheckBox::stateChanged(int state)
\deprecated [6.9] Use checkStateChanged(Qt::CheckState) instead.
*/
In this case, it would be arguably better that Qdoc compares the version in the brackets to the current Qt version, and ignores the command for Qt 6.7, 6.8.
| For Gerrit Dashboard: QTBUG-121378 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 542447,5 | qdoc: Handle future versions in \deprecated [<version>] command | dev | qt/qttools | Status: MERGED | +2 | 0 |